[package]
name = "ome_zarr_transformations"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.9", optional = true }
log = "0.4.28"
ndarray = { version = "0.17.1", optional = true }
ordered-float = "5.1.0"
petgraph = { version = "0.8.3", default-features = false, features = ["std", "graphmap", "stable_graph"] }
smallvec = "1.15.1"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.7.0"
env_logger = "0.11.8"
faer = { version = "0.23.2", default-features = false, features = [
    "std",
    "rand",
] }
ndarray-npy = { version = "0.9.1", default-features = false }

[[bench]]
name = "benchmarks"
harness = false

[features]
ndarray = ["dep:ndarray"]
image = ["dep:image"]

[[example]]
name = "image"
required-features = ["image"]
